--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.slf4j:slf4j-android:1.7.29'
+    implementation 'androidx.core:core:1.7.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
